syntax = "proto3";

option java_multiple_files = true;
option java_package = "urjc.mastercloudapps.quarkus.quarkus.examples";
option java_outer_classname = "GeneratorProto";

package generator;

service RandomNumberGenerator {
  rpc GenerateNumber (GenerateNumberRequest) returns (GenerateNumberResponse){}
}

message GenerateNumberRequest {
  int32 number = 1;
}

message GenerateNumberResponse {
  int32 number = 1;
}